src/lib_gd/repository.cr

  fun image_create_from_gd2_part_ctx = gdImageCreateFromGd2PartCtx(in : IoCtxPtr, srcx : LibC::Int, srcy : LibC::Int, w : LibC::Int, h : LibC::Int) : ImagePtr
  fun image_create_from_gd2_part_ptr = gdImageCreateFromGd2PartPtr(size : LibC::Int, data : Void*, srcx : LibC::Int, srcy : LibC::Int, w : LibC::Int, h : LibC::Int) : ImagePtr
  fun image_create_from_gd2_ptr = gdImageCreateFromGd2Ptr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_ctx = gdImageCreateFromGdCtx(in : IoCtxPtr) : ImagePtr
  fun image_create_from_ptr = gdImageCreateFromGdPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_gif = gdImageCreateFromGif(fd : File*) : ImagePtr
  fun image_create_from_gif_ctx = gdImageCreateFromGifCtx(in : IoCtxPtr) : ImagePtr
  fun image_create_from_gif_ptr = gdImageCreateFromGifPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_heif = gdImageCreateFromHeif(in_file : File*) : ImagePtr
  fun image_create_from_heif_ctx = gdImageCreateFromHeifCtx(infile : IoCtxPtr) : ImagePtr
  fun image_create_from_heif_ptr = gdImageCreateFromHeifPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_jpeg = gdImageCreateFromJpeg(infile : File*) : ImagePtr
  fun image_create_from_jpeg_ctx = gdImageCreateFromJpegCtx(infile : IoCtxPtr) : ImagePtr
  fun image_create_from_jpeg_ctx_ex = gdImageCreateFromJpegCtxEx(infile : IoCtxPtr, ignore_warning : LibC::Int) : ImagePtr
  fun image_create_from_jpeg_ex = gdImageCreateFromJpegEx(infile : File*, ignore_warning : LibC::Int) : ImagePtr
  fun image_create_from_jpeg_ptr = gdImageCreateFromJpegPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_jpeg_ptr_ex = gdImageCreateFromJpegPtrEx(size : LibC::Int, data : Void*, ignore_warning : LibC::Int) : ImagePtr
  fun image_create_from_png = gdImageCreateFromPng(fd : File*) : ImagePtr
  fun image_create_from_png_ctx = gdImageCreateFromPngCtx(in : IoCtxPtr) : ImagePtr
  fun image_create_from_png_ptr = gdImageCreateFromPngPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_png_source = gdImageCreateFromPngSource(in : SourcePtr) : ImagePtr
  fun image_create_from_tga = gdImageCreateFromTga(fp : File*) : ImagePtr
  fun image_create_from_tga_ctx = gdImageCreateFromTgaCtx(ctx : IoCtxPtr) : ImagePtr
  fun image_create_from_tga_ptr = gdImageCreateFromTgaPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_tiff = gdImageCreateFromTiff(in_file : File*) : ImagePtr
  fun image_create_from_tiff_ctx = gdImageCreateFromTiffCtx(infile : IoCtxPtr) : ImagePtr
  fun image_create_from_tiff_ptr = gdImageCreateFromTiffPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_wbmp = gdImageCreateFromWBMP(in_file : File*) : ImagePtr
  fun image_create_from_wbmp_ctx = gdImageCreateFromWBMPCtx(infile : IoCtxPtr) : ImagePtr
  fun image_create_from_wbmp_ptr = gdImageCreateFromWBMPPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_webp = gdImageCreateFromWebp(in_file : File*) : ImagePtr
  fun image_create_from_webp_ctx = gdImageCreateFromWebpCtx(infile : IoCtxPtr) : ImagePtr
  fun image_create_from_webp_ptr = gdImageCreateFromWebpPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_xbm = gdImageCreateFromXbm(in : File*) : ImagePtr
  fun image_create_from_xpm = gdImageCreateFromXpm(filename : LibC::Char*) : ImagePtr
  fun image_create_palette_from_true_color = gdImageCreatePaletteFromTrueColor(im : ImagePtr, dither_flag : LibC::Int, colors_wanted : LibC::Int) : ImagePtr
  fun image_create_true_color = gdImageCreateTrueColor(sx : LibC::Int, sy : LibC::Int) : ImagePtr
  fun image_crop = gdImageCrop(src : ImagePtr, crop : Rect*) : ImagePtr
  fun image_crop_auto = gdImageCropAuto(im : ImagePtr, mode : LibC::UInt) : ImagePtr
  fun image_crop_threshold = gdImageCropThreshold(im : ImagePtr, color : LibC::UInt, threshold : LibC::Float) : ImagePtr
  fun image_dashed_line = gdImageDashedLine(im : ImagePtr, x1 : LibC::Int, y1 : LibC::Int, x2 : LibC::Int, y2 : LibC::Int, color : LibC::Int)
  fun image_destroy = gdImageDestroy(im : ImagePtr)
  fun image_edge_detect_quick = gdImageEdgeDetectQuick(src : ImagePtr) : LibC::Int
  fun image_ellipse = gdImageEllipse(im : ImagePtr, cx : LibC::Int, cy : LibC::Int, w : LibC::Int, h : LibC::Int, color : LibC::Int)
  fun image_emboss = gdImageEmboss(im : ImagePtr) : LibC::Int
  fun image_file = gdImageFile(im : ImagePtr, filename : LibC::Char*) : LibC::Int
  fun image_fill = gdImageFill(im : ImagePtr, x : LibC::Int, y : LibC::Int, color : LibC::Int)
  fun image_fill_to_border = gdImageFillToBorder(im : ImagePtr, x : LibC::Int, y : LibC::Int, border : LibC::Int, color : LibC::Int)
  fun image_filled_arc = gdImageFilledArc(im : ImagePtr, cx : LibC::Int, cy : LibC::Int, w : LibC::Int, h : LibC::Int, s : LibC::Int, e : LibC::Int, color : LibC::Int, style : LibC::Int)
  fun image_filled_ellipse = gdImageFilledEllipse(im : ImagePtr, cx : LibC::Int, cy : LibC::Int, w : LibC::Int, h : LibC::Int, color : LibC::Int)
  fun image_filled_polygon = gdImageFilledPolygon(im : ImagePtr, p : PointPtr, n : LibC::Int, c : LibC::Int)
  fun image_filled_rectangle = gdImageFilledRectangle(im : ImagePtr, x1 : LibC::Int, y1 : LibC::Int, x2 : LibC::Int, y2 : LibC::Int, color : LibC::Int)
  fun image_flip_both = gdImageFlipBoth(im : ImagePtr)
  fun image_flip_horizontal = gdImageFlipHorizontal(im : ImagePtr)
  fun image_flip_vertical = gdImageFlipVertical(im : ImagePtr)
  fun image_gaussian_blur = gdImageGaussianBlur(im : ImagePtr) : LibC::Int
  fun image_gd = gdImageGd(im : ImagePtr, out : File*)
  fun image_gd2 = gdImageGd2(im : ImagePtr, out : File*, cs : LibC::Int, fmt : LibC::Int)
  fun image_gd2_ptr = gdImageGd2Ptr(im : ImagePtr, cs : LibC::Int, fmt : LibC::Int, size : LibC::Int*) : Void*
  fun image_ptr = gdImagePtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_get_clip = gdImageGetClip(im : ImagePtr, x1_p : LibC::Int*, y1_p : LibC::Int*, x2_p : LibC::Int*, y2_p : LibC::Int*)
  fun image_get_interpolation_method = gdImageGetInterpolationMethod(im : ImagePtr) : InterpolationMethodID
  fun image_get_pixel = gdImageGetPixel(im : ImagePtr, x : LibC::Int, y : LibC::Int) : LibC::Int
  fun image_get_true_color_pixel = gdImageGetTrueColorPixel(im : ImagePtr, x : LibC::Int, y : LibC::Int) : LibC::Int
  fun image_gif = gdImageGif(im : ImagePtr, out : File*)
  fun image_gif_anim_add = gdImageGifAnimAdd(im : ImagePtr, out_file : File*, local_cm : LibC::Int, left_ofs : LibC::Int, top_ofs : LibC::Int, delay : LibC::Int, disposal : LibC::Int, previm : ImagePtr)
  fun image_gif_anim_add_ctx = gdImageGifAnimAddCtx(im : ImagePtr, out : IoCtxPtr, local_cm : LibC::Int, left_ofs : LibC::Int, top_ofs : LibC::Int, delay : LibC::Int, disposal : LibC::Int, previm : ImagePtr)
  fun image_gif_anim_add_ptr = gdImageGifAnimAddPtr(im : ImagePtr, size : LibC::Int*, local_cm : LibC::Int, left_ofs : LibC::Int, top_ofs : LibC::Int, delay : LibC::Int, disposal : LibC::Int, previm : ImagePtr) : Void*
  fun image_gif_anim_begin = gdImageGifAnimBegin(im : ImagePtr, out_file : File*, global_cm : LibC::Int, loops : LibC::Int)
  fun image_gif_anim_begin_ctx = gdImageGifAnimBeginCtx(im : ImagePtr, out : IoCtxPtr, global_cm : LibC::Int, loops : LibC::Int)
  fun image_gif_anim_begin_ptr = gdImageGifAnimBeginPtr(im : ImagePtr, size : LibC::Int*, global_cm : LibC::Int, loops : LibC::Int) : Void*
  fun image_gif_anim_end = gdImageGifAnimEnd(out_file : File*)
  fun image_gif_anim_end_ctx = gdImageGifAnimEndCtx(out : IoCtxPtr)
  fun image_gif_anim_end_ptr = gdImageGifAnimEndPtr(size : LibC::Int*) : Void*
  fun image_gif_ctx = gdImageGifCtx(im : ImagePtr, out : IoCtxPtr)
  fun image_gif_ptr = gdImageGifPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_gray_scale = gdImageGrayScale(src : ImagePtr) : LibC::Int
  fun image_heif = gdImageHeif(im : ImagePtr, out_file : File*)
  fun image_heif_ctx = gdImageHeifCtx(im : ImagePtr, outfile : IoCtxPtr, quality : LibC::Int, codec : HeifCodec, chroma : HeifChroma)
  fun image_heif_ex = gdImageHeifEx(im : ImagePtr, out_file : File*, quality : LibC::Int, codec : HeifCodec, chroma : HeifChroma)
  fun image_heif_ptr = gdImageHeifPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_heif_ptr_ex = gdImageHeifPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_interlace = gdImageInterlace(im : ImagePtr, interlace_arg : LibC::Int)
  fun image_jpeg = gdImageJpeg(im : ImagePtr, out : File*, quality : LibC::Int)
  fun image_jpeg_ctx = gdImageJpegCtx(im : ImagePtr, out : IoCtxPtr, quality : LibC::Int)
  fun image_jpeg_ptr = gdImageJpegPtr(im : ImagePtr, size : LibC::Int*, quality : LibC::Int) : LibC::Char*
  fun image_line = gdImageLine(im : ImagePtr, x1 : LibC::Int, y1 : LibC::Int, x2 : LibC::Int, y2 : LibC::Int, color : LibC::Int)
  fun image_mean_removal = gdImageMeanRemoval(im : ImagePtr) : LibC::Int
  fun image_negate = gdImageNegate(src : ImagePtr) : LibC::Int
  fun image_neu_quant = gdImageNeuQuant(im : ImagePtr, max_color : LibC::Int, sample_factor : LibC::Int) : ImagePtr
  fun image_open_polygon = gdImageOpenPolygon(im : ImagePtr, p : PointPtr, n : LibC::Int, c : LibC::Int)
  fun image_palette_copy = gdImagePaletteCopy(dst : ImagePtr, src : ImagePtr)
  fun image_palette_to_true_color = gdImagePaletteToTrueColor(src : ImagePtr) : LibC::Int
  fun image_pixelate = gdImagePixelate(im : ImagePtr, block_size : LibC::Int, mode : LibC::UInt) : LibC::Int
  fun image_png = gdImagePng(im : ImagePtr, out : File*)
  fun image_png_ctx = gdImagePngCtx(im : ImagePtr, out : IoCtxPtr)
  fun image_png_ctx_ex = gdImagePngCtxEx(im : ImagePtr, out : IoCtxPtr, level : LibC::Int)
  fun image_png_ex = gdImagePngEx(im : ImagePtr, out : File*, level : LibC::Int)
  fun image_png_ptr = gdImagePngPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_png_ptr_ex = gdImagePngPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_png_to_sink = gdImagePngToSink(im : ImagePtr, out : SinkPtr)
  fun image_polygon = gdImagePolygon(im : ImagePtr, p : PointPtr, n : LibC::Int, c : LibC::Int)
  fun image_rectangle = gdImageRectangle(im : ImagePtr, x1 : LibC::Int, y1 : LibC::Int, x2 : LibC::Int, y2 : LibC::Int, color : LibC::Int)
  fun image_rotate_interpolated = gdImageRotateInterpolated(src : ImagePtr, angle : LibC::Float, bgcolor : LibC::Int) : ImagePtr
  fun image_save_alpha = gdImageSaveAlpha(im : ImagePtr, save_alpha_arg : LibC::Int)
  fun image_scale = gdImageScale(src : ImagePtr, new_width : LibC::UInt, new_height : LibC::UInt) : ImagePtr
  fun image_scatter = gdImageScatter(im : ImagePtr, sub : LibC::Int, plus : LibC::Int) : LibC::Int
  fun image_scatter_color = gdImageScatterColor(im : ImagePtr, sub : LibC::Int, plus : LibC::Int, colors : LibC::Int*, num_colors : LibC::UInt) : LibC::Int
  fun image_scatter_ex = gdImageScatterEx(im : ImagePtr, s : ScatterPtr) : LibC::Int
  fun image_selective_blur = gdImageSelectiveBlur(src : ImagePtr) : LibC::Int
  fun image_set_anti_aliased = gdImageSetAntiAliased(im : ImagePtr, c : LibC::Int)
  fun image_set_anti_aliased_dont_blend = gdImageSetAntiAliasedDontBlend(im : ImagePtr, c : LibC::Int, dont_blend : LibC::Int)
  fun image_set_brush = gdImageSetBrush(im : ImagePtr, brush : ImagePtr)
  fun image_set_clip = gdImageSetClip(im : ImagePtr, x1 : LibC::Int, y1 : LibC::Int, x2 : LibC::Int, y2 : LibC::Int)
  fun image_set_interpolation_method = gdImageSetInterpolationMethod(im : ImagePtr, id : InterpolationMethodID) : LibC::Int
  fun image_set_pixel = gdImageSetPixel(im : ImagePtr, x : LibC::Int, y : LibC::Int, color : LibC::Int)
  fun image_set_resolution = gdImageSetResolution(im : ImagePtr, res_x : LibC::UInt, res_y : LibC::UInt)
  fun image_set_style = gdImageSetStyle(im : ImagePtr, style : LibC::Int*, no_of_pixels : LibC::Int)
  fun image_set_thickness = gdImageSetThickness(im : ImagePtr, thickness : LibC::Int)
  fun image_set_tile = gdImageSetTile(im : ImagePtr, tile : ImagePtr)
